<resources>
    <string name="app_name">Upcoming Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_sarch">Search Movies</string>
    <string name="title_activity_moevie_detail">MoevieDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "

    </string>
    <string name="movie_title">Movie title</string>
    <string name="release_date">release date</string>
    <string name="movie_detail_release_date">Release date: %1s</string>
    <string name="movie_detail_genre">Genre: %1s</string>
</resources>
