<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imageViewMoviePoster"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:layout_marginTop="40dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textViewMovieTitle"
            android:layout_marginTop="40dp"
            android:layout_marginStart="91dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title" />

        <TextView
            android:id="@+id/textViewMovieReleaseDate"
            android:layout_marginTop="90dp"
            android:layout_marginStart="91dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date" />


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
