<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewMovieDetailReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_detail_release_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewMovieDetailPoster"
            android:layout_width="105dp"
            android:layout_height="155dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textViewMovieDetailReleaseDate"
            app:layout_constraintTop_toBottomOf="@+id/textViewMovieDetailReleaseDate"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textViewMovieDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="24dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewMovieDetailPoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewMovieDetailPoster"
            app:layout_constraintTop_toTopOf="@+id/imageViewMovieDetailPoster" />

        <TextView
            android:id="@+id/textViewGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="24dp"
            android:text="@string/movie_detail_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewMovieDetailReleaseDate"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMovieDetailPoster" />

        <TextView
            android:id="@+id/textViewMovieDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingEnd="24dp"
            android:paddingStart="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewGenres"
            app:layout_constraintTop_toBottomOf="@+id/textViewGenres" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>